--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,6 +104,13 @@ a {
   color: inherit;
   text-decoration: none;
 }
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @media (prefers-color-scheme: dark) {
   html {
