--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,3 +117,11 @@ a {
     color-scheme: dark;
   }
 }
+
+.login-background {
+  background-image: url('/images/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+}
